--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <footer class="site-footer" role="contentinfo">
     </footer>
 
-    <script src="assets/vendor/jquery/dist/jquery.js"></script>
-    <script src="assets/vendor/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="assets/js/scripts.js"></script>
   </body>
 </html>
