rennomage de "assets/less/layout/main.less" en "assets/less/layout/main-content.less

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap Starter</title>
+    <title>Kramer-Bootstrap</title>
 
     <link href="assets/css/main.css" rel="stylesheet">
 
@@ -24,7 +24,7 @@
     <![endif]-->
 
     <header class="site-header">
-      <h1>Bootstrap Starter</h1>
+      <h1>Kramer-Bootstrap</h1>
 
       <nav class="site-navigation" role="navigation">
       </nav>
